White loading background fixed

--- a/src/MEGASync/node_selector/gui/ui/NodeSelectorLoadingDelegate.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelectorLoadingDelegate.ui
@@ -35,7 +35,7 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">#NodeSelectorLoadingDelegate
+   <string notr="true">NodeSelectorLoadingDelegate
 {
 background-color: transparent;
 }
@@ -45,6 +45,9 @@ background-color: transparent;
 background-color: #EFEFF0; /*colorToken.surface-2*/
 border-radius:4px;
 }</string>
+  </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="leftMargin">
