--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1311,5 +1311,6 @@
         <file alias="chevron-up_small_thin_outline">images/themed/tokenizable/chevron-up_small_thin_outline.svg</file>
         <file alias="minus-square_small_thin_solid">images/themed/tokenizable/minus-square_small_thin_solid.svg</file>
         <file alias="info_small_thin_outline">images/themed/tokenizable/info_small_thin_outline.svg</file>
+        <file alias="pause-circle_small_thin_outline">images/themed/tokenizable/pause-circle_small_thin_outline.svg</file>
     </qresource>
 </RCC>
