--- a/src/MEGASync/transfers/gui/ui/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/ui/TransferManager.ui
@@ -1569,6 +1569,9 @@ QToolButton
                <property name="spacing">
                 <number>0</number>
                </property>
+               <property name="leftMargin">
+                <number>12</number>
+               </property>
                <item>
                 <widget class="QLabel" name="lNbResults">
                  <property name="minimumSize">
