--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1222,7 +1222,7 @@
         <file alias="export-small-regular-outline">images/themed/common/export-small-regular-outline.svg</file>
         <file alias="x_solid_small">images/themed/tokenizable/x_solid_small.svg</file>
         <file alias="external_drive_solid_medium.svg">images/themed/tokenizable/external_drive_solid_medium.svg</file>
-        <file alias="x-circle_small_thin_outline">images/themed/tokenizable/x-circle_small_thin_outline.svg</file>
+        <file alias="search_solid_small">images/themed/tokenizable/search_solid_small.svg</file>
         <file alias="play-circle_medium_thin_outline">images/themed/tokenizable/play-circle_medium_thin_outline.svg</file>
         <file alias="pause-circle_medium_thin_outline">images/themed/tokenizable/pause-circle_medium_thin_outline.svg</file>
         <file alias="gear_six_small_thin_outline">images/themed/tokenizable/gear_six_small_thin_outline.svg</file>
