--- a/src/MEGASync/gui/ui/ChangePassword.ui
+++ b/src/MEGASync/gui/ui/ChangePassword.ui
@@ -26,7 +26,11 @@
    <string>Change password</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">#ChangePassword
+{
+background-color: #FFFFFF; /*colorToken.page-background*/
+}
+</string>
   </property>
   <property name="TOKENIZED" stdset="0">
    <bool>true</bool>
