--- a/src/MEGASync/gui/ui/PermissionsDialog.ui
+++ b/src/MEGASync/gui/ui/PermissionsDialog.ui
@@ -31,6 +31,16 @@
   <property name="windowTitle">
    <string>Permissions</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">#PermissionsDialog
+{
+background-color: #FFFFFF; /*colorToken.page-background*/
+}
+</string>
+  </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>24</number>
