--- a/src/MEGASync/gui/ui/BandwidthSettings.ui
+++ b/src/MEGASync/gui/ui/BandwidthSettings.ui
@@ -35,7 +35,11 @@
    <string>Bandwidth</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">#BandwidthSettings
+{
+background-color: #FFFFFF; /*colorToken.page-background*/
+}
+</string>
   </property>
   <property name="TOKENIZED" stdset="0">
    <bool>true</bool>
