SNC-5733: Removed replaceThemeToken, added simple alias, added chevron up dark on transfer & aligned speed meters on transfer manager.

--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -7,16 +7,14 @@
         <file alias="images/account_details/cloud.svg">images/account_details/cloud.svg</file>
         <file alias="images/minus-circle.svg">images/minus-circle.svg</file>
         <file alias="images/x.svg">images/x.svg</file>
-        <file alias="images/themed/dark/spinbox_up_arrow.svg">images/themed/dark/spinbox_up_arrow.svg</file>
-        <file alias="images/themed/dark/spinbox_down_arrow.svg">images/themed/dark/spinbox_down_arrow.svg</file>
-        <file alias="images/themed/dark/switch_on_pressed.svg">images/themed/dark/switch_on_pressed.svg</file>
-        <file alias="images/themed/dark/switch_on_hover.svg">images/themed/dark/switch_on_hover.svg</file>
-        <file alias="images/themed/dark/switch_on.svg">images/themed/dark/switch_on.svg</file>
-        <file alias="images/themed/dark/switch_off_pressed.svg">images/themed/dark/switch_off_pressed.svg</file>
-        <file alias="images/themed/dark/switch_off_hover.svg">images/themed/dark/switch_off_hover.svg</file>
-        <file alias="images/themed/dark/switch_off.svg">images/themed/dark/switch_off.svg</file>
-        <file alias="images/themed/dark/radio_unchecked.svg">images/themed/dark/radio_unchecked.svg</file>
-        <file alias="images/themed/dark/radio_checked.svg">images/themed/dark/radio_checked.svg</file>
+        <file alias="spinbox_up_arrow">images/themed/dark/spinbox_up_arrow.svg</file>
+        <file alias="spinbox_down_arrow">images/themed/dark/spinbox_down_arrow.svg</file>
+        <file alias="switch_on_pressed">images/themed/dark/switch_on_pressed.svg</file>
+        <file alias="switch_on_hover">images/themed/dark/switch_on_hover.svg</file>
+        <file alias="switch_on">images/themed/dark/switch_on.svg</file>
+        <file alias="switch_off_pressed">images/themed/dark/switch_off_pressed.svg</file>
+        <file alias="switch_off_hover">images/themed/dark/switch_off_hover.svg</file>
+        <file alias="switch_off">images/themed/dark/switch_off.svg</file>
         <file alias="images/settings-account.svg">images/settings-account.svg</file>
         <file alias="images/settings-backup.svg">images/settings-backup.svg</file>
         <file alias="images/settings-backup-warn.svg">images/settings-backup-warn.svg</file>
@@ -31,45 +29,51 @@
         <file alias="images/Small_Free@2x.png">images/Small_Free@2x.png</file>
         <file alias="images/Small_Free@3x.png">images/Small_Free@3x.png</file>
         <file alias="images/help-icon.svg">images/help-icon.svg</file>
-        <file alias="images/themed/dark/radio_unchecked_pressed.svg">images/themed/dark/radio_unchecked_pressed.svg</file>
-        <file alias="images/themed/dark/radio_unchecked_hover.svg">images/themed/dark/radio_unchecked_hover.svg</file>
-        <file alias="images/themed/dark/radio_unchecked_disabled.svg">images/themed/dark/radio_unchecked_disabled.svg</file>
-        <file alias="images/themed/dark/radio_checked_pressed.svg">images/themed/dark/radio_checked_pressed.svg</file>
-        <file alias="images/themed/dark/radio_checked_hover.svg">images/themed/dark/radio_checked_hover.svg</file>
-        <file alias="images/themed/dark/radio_checked_disabled.svg">images/themed/dark/radio_checked_disabled.svg</file>
-        <file alias="images/themed/dark/checkbox_on_pressed.svg">images/themed/dark/checkbox_on_pressed.svg</file>
-        <file alias="images/themed/dark/checkbox_on_hover.svg">images/themed/dark/checkbox_on_hover.svg</file>
-        <file alias="images/themed/dark/checkbox_on_disabled.svg">images/themed/dark/checkbox_on_disabled.svg</file>
-        <file alias="images/themed/dark/checkbox_on.svg">images/themed/dark/checkbox_on.svg</file>
-        <file alias="images/themed/dark/checkbox_off_pressed.svg">images/themed/dark/checkbox_off_pressed.svg</file>
-        <file alias="images/themed/dark/checkbox_off_hover.svg">images/themed/dark/checkbox_off_hover.svg</file>
-        <file alias="images/themed/dark/checkbox_off_disabled.svg">images/themed/dark/checkbox_off_disabled.svg</file>
-        <file alias="images/themed/dark/checkbox_off.svg">images/themed/dark/checkbox_off.svg</file>
-        <file alias="images/themed/dark/arrow-up-circle.svg">images/themed/dark/arrow-up-circle.svg</file>
-        <file alias="images/themed/dark/arrow-down-circle.svg">images/themed/dark/arrow-down-circle.svg</file>
-        <file alias="images/themed/dark/eye_press.svg">images/themed/dark/eye_press.svg</file>
-        <file alias="images/themed/dark/eye-off_press.svg">images/themed/dark/eye-off_press.svg</file>
-        <file alias="images/themed/dark/eye-off_hover.svg">images/themed/dark/eye-off_hover.svg</file>
-        <file alias="images/themed/dark/eye-off_disabled.svg">images/themed/dark/eye-off_disabled.svg</file>
-        <file alias="images/themed/dark/eye-off_default.svg">images/themed/dark/eye-off_default.svg</file>
-        <file alias="images/themed/dark/eye_hover.svg">images/themed/dark/eye_hover.svg</file>
-        <file alias="images/themed/dark/eye_disabled.svg">images/themed/dark/eye_disabled.svg</file>
-        <file alias="images/themed/dark/eye_default.svg">images/themed/dark/eye_default.svg</file>
-        <file alias="chevron-down_press">images/themed/dark/chevron-down_press.svg</file>
-        <file alias="chevron-down_hover">images/themed/dark/chevron-down_hover.svg</file>
-        <file alias="chevron-down_disabled">images/themed/dark/chevron-down_disabled.svg</file>
+        <file alias="radio_unchecked">images/themed/dark/radio_unchecked.svg</file>
+        <file alias="radio_unchecked_pressed.svg">images/themed/dark/radio_unchecked_pressed.svg</file>
+        <file alias="radio_unchecked_hover.svg">images/themed/dark/radio_unchecked_hover.svg</file>
+        <file alias="radio_unchecked_disabled.svg">images/themed/dark/radio_unchecked_disabled.svg</file>
+        <file alias="radio_checked">images/themed/dark/radio_checked.svg</file>
+        <file alias="radio_checked_pressed.svg">images/themed/dark/radio_checked_pressed.svg</file>
+        <file alias="radio_checked_hover.svg">images/themed/dark/radio_checked_hover.svg</file>
+        <file alias="radio_checked_disabled.svg">images/themed/dark/radio_checked_disabled.svg</file>
+        <file alias="checkbox_on_pressed">images/themed/dark/checkbox_on_pressed.svg</file>
+        <file alias="checkbox_on_hover">images/themed/dark/checkbox_on_hover.svg</file>
+        <file alias="checkbox_on_disabled">images/themed/dark/checkbox_on_disabled.svg</file>
+        <file alias="checkbox_on">images/themed/dark/checkbox_on.svg</file>
+        <file alias="checkbox_off_pressed">images/themed/dark/checkbox_off_pressed.svg</file>
+        <file alias="checkbox_off_hover">images/themed/dark/checkbox_off_hover.svg</file>
+        <file alias="checkbox_off_disabled">images/themed/dark/checkbox_off_disabled.svg</file>
+        <file alias="checkbox_off">images/themed/dark/checkbox_off.svg</file>
+        <file alias="checkbox_off_error">images/themed/dark/checkbox_off_error.svg</file>
+        <file alias="checkbox_off_focus_error">images/themed/dark/checkbox_off_focus_error.svg</file>
+        <file alias="checkbox_on_error">images/themed/dark/checkbox_on_error.svg</file>
+        <file alias="checkbox_on_focus_error">images/themed/dark/checkbox_on_focus_error.svg</file>
+        <file alias="arrow-up-circle">images/themed/dark/arrow-up-circle.svg</file>
+        <file alias="arrow-down-circle">images/themed/dark/arrow-down-circle.svg</file>
+        <file alias="eye_press">images/themed/dark/eye_press.svg</file>
+        <file alias="eye-off_press">images/themed/dark/eye-off_press.svg</file>
+        <file alias="eye-off_hover">images/themed/dark/eye-off_hover.svg</file>
+        <file alias="eye-off_disabled">images/themed/dark/eye-off_disabled.svg</file>
+        <file alias="eye-off_default">images/themed/dark/eye-off_default.svg</file>
+        <file alias="eye_hover">images/themed/dark/eye_hover.svg</file>
+        <file alias="eye_disabled">images/themed/dark/eye_disabled.svg</file>
+        <file alias="eye_default">images/themed/dark/eye_default.svg</file>
+        <file alias="chevron-up_default">images/themed/dark/chevron-up_default.svg</file>
+        <file alias="chevron-up_disabled">images/themed/dark/chevron-up_disabled.svg</file>
+        <file alias="chevron-up_hover">images/themed/dark/chevron-up_hover.svg</file>
+        <file alias="chevron-up_press">images/themed/dark/chevron-up_press.svg</file>
         <file alias="chevron-down_default">images/themed/dark/chevron-down_default.svg</file>
+        <file alias="chevron-down_disabled">images/themed/dark/chevron-down_disabled.svg</file>
+        <file alias="chevron-down_hover">images/themed/dark/chevron-down_hover.svg</file>
+        <file alias="chevron-down_press">images/themed/dark/chevron-down_press.svg</file>
         <file alias="images/lock.png">images/lock.png</file>
         <file alias="images/lock@2x.png">images/lock@2x.png</file>
         <file alias="images/lock@3x.png">images/lock@3x.png</file>
         <file alias="images/key_pass.png">images/key_pass.png</file>
         <file alias="images/key_pass@2x.png">images/key_pass@2x.png</file>
         <file alias="images/key_pass@3x.png">images/key_pass@3x.png</file>
-        <file alias="images/themed/dark/error_sync_icon.svg">images/themed/dark/error_sync_icon.svg</file>
-        <file alias="images/themed/dark/checkbox_off_error.svg">images/themed/dark/checkbox_off_error.svg</file>
-        <file alias="images/themed/dark/checkbox_off_focus_error.svg">images/themed/dark/checkbox_off_focus_error.svg</file>
-        <file alias="images/themed/dark/checkbox_on_error.svg">images/themed/dark/checkbox_on_error.svg</file>
-        <file alias="images/themed/dark/checkbox_on_focus_error.svg">images/themed/dark/checkbox_on_focus_error.svg</file>
+        <file alias="error_sync_icon">images/themed/dark/error_sync_icon.svg</file>
         <file alias="images/icons/tray/linux/settings.svg">images/icons/tray/linux/settings.svg</file>
         <file alias="images/icons/tray/linux/exit.svg">images/icons/tray/linux/exit.svg</file>
         <file alias="images/icons/tray/linux/status.svg">images/icons/tray/linux/status.svg</file>
